# terradev

./: .clawhubignore  .env.example  .env.template  .gitignore  BingSiteAuth.xml  Dockerfile  Dockerfile.hub  LICENSE  MANIFEST.in  PAGES_README.md  PROGRESS_UPDATE_JUPYTER.ipynb  README.md  README_ACTION.md  README_DOCKER.md  README_JUPYTER.md  SKILL.md  action.py  action.yml  ai-discovery.json  b2b_roi_analysis.json  bucket-policy.json  byoapi_real_snapshot.json  complete_weakness_resolution_report.json  config.json  critical_fixes_implementation_report.json  critical_weakness_fix_report.json  demo_k8s_config.yaml  docker-compose.yml  example_task.yaml  grafana_training_dashboard.json  index.html  job_example.yaml  kubernetes_integration_report.json  kubernetes_training_deployment.yaml  llms.txt  nginx.conf  parallel_provisioning.tf  pricing_analysis_report.json  production_infrastructure_report.json  production_snapshot.json  (+17 more)
.ebextensions/: python.config
.github/workflows/: ci.yml  deploy.yml  release.yml
analysis/: api-differences-comparison.tf  cost-structure-differences.tf  inference-arbitrage-pivot.tf
apis/: free-apis-latency-arbitrage.tf
business/: compute-arbitrage-business.md
docs/: ADVANCED_FINANCIAL_INNOVATIONS.md  API_DOCUMENTATION.md  FINOPS_ATTRIBUTION_SYSTEM.md  USER_GUIDE.md  architecture.md  robots.txt  sitemap.xml
genius_data_storage/: data_compressor.py  genius_data_demo.py  integrity_verifier.py  main.tf  zero_egress_accessor.py
helm/terradev/: Chart.yaml  values.yaml
infrastructure/kubernetes/: microservices.yaml
infrastructure/terraform/: main.tf
integrations/: cli-tool.tf  cloud-management-widgets.tf  cloud-provider-apis.py  critical-widgets.tf  devops-cicd-widgets.tf  devops-essential-tools.tf  docker-integration.tf  kubernetes-operator.tf  mlflow-integration.tf
kaggle_notebooks/: 01_hf_spaces_cost_optimization.ipynb
openclaw-skill/terradev-gpu-cloud/: LICENSE  README.md  SKILL.md  gpu-check.sh
partnerships/: brand-partnerships.tf  partnership-roadmap.tf
setup/: Lambda Cloud API spec 1.8.3.json  account-setup-guide.tf  setup.sh
terradev_cli/: CHANGELOG.md  README.md  README_old.md  README_with_emojis.md  __init__.py  __main__.py  bandit-report.json  cli.py  cli_clean.py  cli_enhanced.py  cli_final.py  cli_simple.py  cli_tiered.py  cost_optimizer.py  credential_prompt.py  demo.py  entry_point.py  requirements.txt  requirements_minimal.txt  safety-report.json  setup.py  telemetry_protection.py
terradev_cli/core/: __init__.py  auth.py  config.py  cost_scaler.py  cost_tracker.py  data_governance.py  dataset_stager.py  deployment_router.py  drift_detector.py  egress_optimizer.py  gitops_manager.py  gpu_topology.py  helm_generator.py  helm_generator_old.py  hf_cli_integration.py  hf_smart_templates.py  hf_spaces.py  inference_router.py  manifest_cache.py  manifest_example.json  model_orchestrator.py  parallel_provisioner.py  price_discovery.py  price_discovery_mock.py  price_intelligence.py  quick_start.py  rate_limiter.py  stripe_manager.py  telemetry.py  telemetry_backup.py  terradev_engine.py  tier_manager.py  warm_pool_manager.py
terradev_cli/integrations/: __init__.py  prometheus_integration.py  wandb_integration.py
terradev_cli/k8s/: terraform_wrapper.py
terradev_cli/kubernetes/: inferx-cost-optimized.yaml  inferx-infrastructure.yaml  inferx-models.yaml  inferx-platform.yaml  inferx_setup.py
terradev_cli/ml_services/: __init__.py  dvc_service.py  huggingface_service.py  (+14 more)
terraform_cli/: README.md  demo_usage.py  install.sh  terradev_cli.py
terraform_optimization/: backend.tf  error_handling.py  storage_choice_matrix.py  test_error_handler.py  versions.tf
terraform_transparency/: audit_trail.py  audit_trails.json  decision_engine.py  decision_logs.json  operations.json  terraform_manager.py  transparency_demo.py  transparency_report.json
(+59 files in other folders)
